# data_matrix

./: CMakeLists.txt
include/data_matrix/: data_matrix.h
tests/: CMakeLists.txt
tests/src/: test_data_matrix.cpp  test_generic.cpp
